--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
             <p>
-              Our mission is to provide quality online and in-person Model United Nations Conferences. We also recognize that our conference is taking place during a time of war and would encourage you to help. We have provided a donation link below that links to the UN Ukraine Humanitarian Fund. Thanks for the consideration!
+              Our mission is to provide quality online and in-person Model United Nations Conferences. We also recognize that our conference is taking place during a time of war and would encourage you to help.
             </p>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
