--- a/profile1.html
+++ b/profile1.html
@@ -37,13 +37,11 @@
 </head>
 
 <body>
-
- <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">MunCoaches</a></h1>
+        <h1><a href="index.html">ZMUN</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -51,7 +49,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="getstarted scrollto" href="coaches.html">Find a coach</a></li>
+          <li><a class="nav-link scrollto active" href="https://eu.jotform.com/form/221957349386066">Staffing Application Form</a></li>
+          <li><a class="nav-link scrollto active" >Our Full Team (Comming Soon)</a></li>
+          <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
+          
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -81,18 +82,15 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Name</strong>: _________</li>
-                <li><strong>Email</strong>: _________@gmail.com</li>
-                <li><strong>Communication:</strong>  <a href="https://join.slack.com/t/muncoaches/shared_invite/zt-1c9pmodh3-hDsnUZR6YrBmGPSTNW426A" target="_blank" rel="noopener noreferrer">Chatroom Link</a></li>
+                <li><strong>Name</strong>: Ethan Curtis</li>
+                <li><strong>Email</strong>: Ethan8eight@gmail.com</li>
               </ul>
             </div>
               <div class="portfolio-info">
-              <h2>    About _____</h2>
+              <h2>About Ethan Curtis</h2>
               <p>
-                Ethan is a student studying on Vancouver Island and is overjoyed to be a coach for MUNCoaches. Ever since his first conference in 2019, he grew his passion for Model United Nations. Ethan has met long-term friends and made memories from both virtual and in-person conferences that will last a lifetime. Outside the debate floor, Ethan spends his time playing too much tennis, playing instruments and studying for school. Ethan is looking forward to coaching in 2022 and is excited to meet everyone!
-
+                Ethan is a student studying on Vancouver Island and is overjoyed to be the director general and the chief of technology here at ZMUN. Ever since his first conference in 2019, he grew his passion for Model United Nations. Ethan has met long-term friends and made memories from both virtual and in-person conferences that will last a lifetime. Outside the debate floor, Ethan spends his time playing too much tennis, playing instruments and studying for school. Ethan is looking forward to ZMUN 2022 and is excited to meet everyone!
               </p>
-              <li><strong>Qualifications</strong>: Escessive Staffing Experience, Has attended 10+ Conferences; <br> Awards Obtained: Best Delegate, Outstanding Delegate, Honorable mention, Best Research</li>
             </div>
           </div>
 
