--- a/profile2.html
+++ b/profile2.html
@@ -37,13 +37,11 @@
 </head>
 
 <body>
-
- <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">MunCoaches</a></h1>
+        <h1><a href="index.html">ZMUN</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -51,7 +49,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="getstarted scrollto" href="coaches.html">Find a coach</a></li>
+          <li><a class="nav-link scrollto active" href="https://eu.jotform.com/form/221957349386066">Staffing Application Form</a></li>
+          <li><a class="nav-link scrollto active" >Our Full Team (Comming Soon)</a></li>
+          <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
+          
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -70,7 +71,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" style="border-radius:25px">
+                <img src="https://itzxizz.github.io/ZMUN/Michael.jpg" height="50%" style="border-radius:25px">
 
               </div>
               <div class="swiper-pagination"></div>
@@ -81,19 +82,15 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Name</strong>: Sarah Jhonson</li>
-                <li><strong>Email</strong>: SarahJhonson100@gmail.com</li>
-                <li><strong>Communication:</strong>  <a href="https://join.slack.com/t/muncoaches/shared_invite/zt-1c9pmodh3-hDsnUZR6YrBmGPSTNW426A" target="_blank" rel="noopener noreferrer">Chatroom Link</a></li>
+                <li><strong>Name</strong>: Michael Xie</li>
+                <li><strong>Email</strong>: Michael.xie@smus.ca</li>
               </ul>
             </div>
               <div class="portfolio-info">
-
-              <h2>    About Sarah</h2>
-
+              <h2>About Michael Xie</h2>
               <p>
-                      Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Michael is a student sudying on Vancouver Island, attempting to make his community a better place. With this conference, Michael hopes to develop new skills and gain experience. Michael can typically be found at the golf course or in his room playing his guitar, which he is extremely passionate about. Michael is very excited to be a secretariat member at ZMUN 2022!
               </p>
-              <li><strong>Qualifications</strong>: Escessive Staffing Experience, 4x Best Delegate, Certified curriculm coach</li>
             </div>
           </div>
 
