--- a/index.html
+++ b/index.html
@@ -102,64 +102,67 @@
             <div class="col-lg-3 col-md-8 d-flex ">
             <div class="member" data-aos="fade-up" data-aos-delay="100" id="member1231">
               <div class="member-img">
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="img-fluid" alt="">
+                <a href="profile1.html">
+                <img src="https://itzxizz.github.io/ZMUN/ethan.jpg" class="img-fluid" alt="">
+                </a>
                 <div class="social">
-                  <a href="" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/ethansmus/" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>________</h4>
-                <span>Co-Secretary General, Conference Founder</span>
+                <h4>Ethan Curtis</h4>
+                <span>Secretary General, Conference Co-Founder, Technology Adminstrator</span>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-8 d-flex ">
+          <div class="col-lg-3 col-md-8 d-fixed ">
             <div class="member" data-aos="fade-up" data-aos-delay="100" id="member1231">
               <div class="member-img">
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="img-fluid" alt="">
+                <a href="profile2.html">
+                <img src="https://itzxizz.github.io/ZMUN/Michael.jpg" class="img-fluid" alt="">
+                </a>
                 <div class="social">
-                  <a href="" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/michael_xi3/" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>________</h4>
-                <span>Co-Secretary General, Conference Founder</span>
+                <h4>Michael Xie</h4>
+                <span>Secretary General, Conference Co-Founder</span>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 d-flex ">
+          <div class="col-lg-3 col-md-6 d-fixed ">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="img-fluid" alt="">
+                <a href="profile3.html">
+                <img src="https://itzxizz.github.io/ZMUN/Yinfan.png" class="img-fluid" alt="">
+                </a>
                 <div class="social">
-                  <a href="" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/yingfan.bai/" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>_________</h4>
+                <h4>Yingfan Bai</h4>
                 <span>Director General</span>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 d-flex ">
+          <div class="col-lg-3 col-md-6 d-fixed ">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="img-fluid" alt="">
+                <a href="profile4.html">
+                <img src="https://itzxizz.github.io/ZMUN/anna.png" class="img-fluid" alt="">
                 <div class="social">
-                  <a href="" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
+                </a>
               </div>
               <div class="member-info">
-                <h4>_________</h4>
+                <h4>Annalise Politis</h4>
                 <span>Chief of Staff</span>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 d-flex ">
+         <!---- <div class="col-lg-3 col-md-6 d-flex ">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
                 <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="img-fluid" alt="">
@@ -220,7 +223,7 @@
             </div>
           </div>
         </div>
-
+      -->
       </div>
     </section><!-- End Team Section -->
     <!-- ======= Testimonials Section ======= -->
@@ -329,7 +332,7 @@
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
             <p>
-              Our mission is to provide quality online and in-person Model United Nations Conferences. We also recognize that our conference is taking place during a time of war and would encourage you to help. We have provided a donation link below that links to the UN Ukraine Humanitarian Fund. Thanks for the consideration!
+              Our mission is to provide quality online and in-person Model United Nations Conferences. We also recognize that our conference is taking place during a time of war and would encourage you to help. 
             </p>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
@@ -348,15 +351,15 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Socials</h2>
+          <h2>Instagram</h2>
         </div>
         <center>
-          <div class="col-lg-9 col-md-12" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-10 col-md-12" data-aos="fade-up" data-aos-delay="100">
             <div class="contact-about">
-              <p>If you are interested our conference, have a question, or wish to support us online, please don't hesitate to contact us directly through the instagram link below</p>
-              <br>
+              <p>If you are interested our conference, have a question, or wish to support us online, please don't hesitate to contact us directly through the instagram link below
               <div class="social-links">
-                <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.instagram.com/zmun_social/" class="instagram"><i class="bi bi-instagram"></i></a>
+              </p>
               </div>
             </div>
           </div>
