--- a/profile1.html
+++ b/profile1.html
@@ -50,8 +50,10 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto active" href="https://eu.jotform.com/form/221957349386066">Staffing Application Form</a></li>
-          <li><a class="nav-link scrollto active" >Our Full Team (Comming Soon)</a></li>
+          <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
           <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
+          <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
+
           
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -83,13 +85,12 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Name</strong>: Ethan Curtis</li>
-                <li><strong>Email</strong>: Ethan8eight@gmail.com</li>
               </ul>
             </div>
               <div class="portfolio-info">
               <h2>About Ethan Curtis</h2>
               <p>
-                Ethan is a student studying on Vancouver Island and is overjoyed to be the director general and the chief of technology here at ZMUN. Ever since his first conference in 2019, he grew his passion for Model United Nations. Ethan has met long-term friends and made memories from both virtual and in-person conferences that will last a lifetime. Outside the debate floor, Ethan spends his time playing too much tennis, playing instruments and studying for school. Ethan is looking forward to ZMUN 2022 and is excited to meet everyone!
+                Ethan is a highschool student currently studying on Vancouver Island and is overjoyed to be this year's Secretary General and Chief of technology at ZMUN. Ever since his first conference in 2019, Ethan's love for Model United Nations has continually grown. Attending and staffing at conferences has instilled in him memories that will last him a lifetime. Outside of MUN, Ethan spends his time practicing for and competing in tennis tournaments, playing the violin, programming, and enjoying music. Ethan is looking forward to administering ZMUN’s second iteration and can’t wait to meet everyone!
               </p>
             </div>
           </div>
@@ -102,7 +103,14 @@
 </div>
   </main><!-- End #main -->
 
- 
+  <footer>
+    <center>
+    <br>
+    <p>Designed By <a href="https://itzxizz.github.io/Portfolio/" target="_blank" rel="noopener noreferrer">Ethan Curtis</a> | &copy;	2022 All rights reserved.</p>
+    </center>
+  </footer>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
