--- a/profile3.html
+++ b/profile3.html
@@ -50,8 +50,10 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto active" href="https://eu.jotform.com/form/221957349386066">Staffing Application Form</a></li>
-          <li><a class="nav-link scrollto active" >Our Full Team (Comming Soon)</a></li>
+          <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
           <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
+          <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
+
           
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -62,28 +64,28 @@
     <!-- ======= Portfolio Details Section ======= -->
     <center>
     <div data-aos="fade-up" data-aos-delay="100">
+      <br><br>
     <section id="portfolio-details" class="portfolio-details">
       <div class="container" data-aos="fade-down" data-aos-delay="100">
           <br><br><br>
         <div class="row gy-4">
 
-          <div class="col-lg-5">
+          <div class="col-lg-3">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <img src="https://itzxizz.github.io/ZMUN/Yinfan.png" height="50%" style="border-radius:25px">
+                <img src="https://itzxizz.github.io/ZMUN/Yinfan.png" height="400px" style="border-radius:25px">
 
               </div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
 
-          <div class="col-lg-7">
+          <div class="col-lg-9">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
                 <li><strong>Name</strong>: Yingfan Bai</li>
-                <li><strong>Email</strong>: Yingfan.bai@smus.ca</li>
               </ul>
             </div>
               <div class="portfolio-info">
@@ -102,7 +104,14 @@
 </div>
   </main><!-- End #main -->
 
- 
+  <footer>
+    <center>
+    <br>
+    <p>Designed By <a href="https://itzxizz.github.io/Portfolio/" target="_blank" rel="noopener noreferrer">Ethan Curtis</a> | &copy;	2022 All rights reserved.</p>
+    </center>
+  </footer>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
