--- a/profile5.html
+++ b/profile5.html
@@ -37,13 +37,11 @@
 </head>
 
 <body>
-
- <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">MunCoaches</a></h1>
+        <h1><a href="index.html">ZMUN</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -51,7 +49,12 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="getstarted scrollto" href="coaches.html">Find a coach</a></li>
+          <li><a class="nav-link scrollto active" href="https://eu.jotform.com/form/221957349386066">Staffing Application Form</a></li>
+          <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
+          <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
+          <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
+
+          
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -66,11 +69,11 @@
           <br><br><br>
         <div class="row gy-4">
 
-          <div class="col-lg-5">
+          <div class="col-lg-4">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" style="border-radius:25px">
+                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" width=900px height=400px  style="border-radius:25px">
 
               </div>
               <div class="swiper-pagination"></div>
@@ -79,19 +82,12 @@
 
           <div class="col-lg-7">
             <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Name</strong>: Martin Sanders</li>
-                <li><strong>Email</strong>: Martin12418534@gmail.com</li>
-                <li><strong>Communication:</strong>  <a href="https://join.slack.com/t/muncoaches/shared_invite/zt-1c9pmodh3-hDsnUZR6YrBmGPSTNW426A" target="_blank" rel="noopener noreferrer">Chatroom Link</a></li>
-              </ul>
+              <h3>Get to know your secretariat</h3>
             </div>
               <div class="portfolio-info">
-              <h2>    About Martin</h2>
+              <h2>About Cindy Yang</h2>
               <p>
-                      Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-              <li><strong>Qualifications</strong>: Escessive Staffing Experience, 4x Best Delegate, Certified curriculm coach</li>
+                A grade 9 student currently attending Crofton House School, Cindy is delighted to serve as ZMUN 2022’s USG delegate affairs and USG IT. Ever since walking into her first MUN conference at CAHSMUN horizons 2021, she has become fond of the competitive yet collaborative aspects Model UN has to offer. Through several conferences she has delegated in, new friendships formed, as well as increased knowledge of both recent and past events in the world, Cindy’s passion for Model UN has never stopped growing. Beyond Model UN, Cindy enjoys playing badminton and volleyball with her friends, racing down snowing mountains on her skis, and spending time with her dog and birds. She looks forward to making an unforgettable experience for everyone attending ZMUN 2022.              </p>
             </div>
           </div>
 
@@ -103,7 +99,14 @@
 </div>
   </main><!-- End #main -->
 
- 
+  <footer>
+    <center>
+    <br>
+    <p>Designed By <a href="https://itzxizz.github.io/Portfolio/" target="_blank" rel="noopener noreferrer">Ethan Curtis</a> | &copy;	2022 All rights reserved.</p>
+    </center>
+  </footer>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
