--- a/profile7.html
+++ b/profile7.html
@@ -37,13 +37,11 @@
 </head>
 
 <body>
-
- <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">MunCoaches</a></h1>
+        <h1><a href="index.html">ZMUN</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -51,7 +49,12 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="getstarted scrollto" href="coaches.html">Find a coach</a></li>
+          <li><a class="nav-link scrollto active" href="https://eu.jotform.com/form/221957349386066">Staffing Application Form</a></li>
+          <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
+          <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
+          <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
+
+          
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -61,16 +64,17 @@
     <!-- ======= Portfolio Details Section ======= -->
     <center>
     <div data-aos="fade-up" data-aos-delay="100">
+      <br><br>
     <section id="portfolio-details" class="portfolio-details">
       <div class="container" data-aos="fade-down" data-aos-delay="100">
           <br><br><br>
         <div class="row gy-4">
 
-          <div class="col-lg-5">
+          <div class="col-lg-4">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <img src="assets/img/team/Yingfan.jpg" style="border-radius:25px">
+                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" width=900px height=400px  style="border-radius:25px">
 
               </div>
               <div class="swiper-pagination"></div>
@@ -79,21 +83,13 @@
 
           <div class="col-lg-7">
             <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Name</strong>: Yingfan Bai</li>
-                <li><strong>Email</strong>: ethan8eight@gmail.com</li>
-                <li><strong>Communication:</strong>  <a href="https://join.slack.com/t/muncoaches/shared_invite/zt-1c9pmodh3-hDsnUZR6YrBmGPSTNW426A" target="_blank" rel="noopener noreferrer">Chatroom Link</a></li>
-              </ul>
+              <h3>Get to know your secretariat</h3>
             </div>
               <div class="portfolio-info">
-              <h2>    About Yingfan</h2>
+              <h2>About Amanda Lee</h2>
               <p>
-                Yingfan is a student currently studying on Vancouver Island. She is so excited to be serving on the secretariat team this year as the Secretary of Staff. Her first Model United Nations conference was in Grade 7, and that was the start to her Model UN passion. Ever since, Yingfan has attended many in person and online conferences. Outside of the Model UN world, Yingfan can be found dancing and swimming. Yingfan is looking forward to ZMUN 2022 and meeting everyone!
-
-              </p>
-              <li><strong>Qualifications</strong>: Escessive Staffing Experience, Has attended 10+ Conferences; <br> Awards Obtained: Best Delegate, Outstanding Delegate, Honorable mention, Best Research</li>
-            </div>
+                Amanda is currently a student at Crofton House School. She is incredibly excited to be serving on the secretariat for the second iteration of ZMUN! Her first Model United Nations conference was at the beginning of grade 8 and since has been to multiple conferences. When not at a conference, Amanda can be found baking or running. Amanda is so excited for ZMUN 2022 and having the opportunity to meet everyone!
+              </div>
           </div>
 
         </div>
@@ -104,7 +100,14 @@
 </div>
   </main><!-- End #main -->
 
- 
+  <footer>
+    <center>
+    <br>
+    <p>Designed By <a href="https://itzxizz.github.io/Portfolio/" target="_blank" rel="noopener noreferrer">Ethan Curtis</a> | &copy;	2022 All rights reserved.</p>
+    </center>
+  </footer>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
