--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100" id="member1231">
               <div class="member-img">
                 <a href="profile1.html">
-                <img src="/assets/img/team/ethan.jpg" width=400px height=400px class="img-fluid" alt="">
+                <img src="./assets/img/team/ethan.jpg" width=400px height=400px class="img-fluid" alt="">
                 </a>
                 <div class="social">
                   <a href="https://www.instagram.com/ethansmus/" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
