--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
                 <a href="profile4.html">
-                <img src="/assets/img/team/anna.png" width=500px height=500px class="img-fluid" alt="">
+                <img src="./assets/img/team/anna.png" width=500px height=500px class="img-fluid" alt="">
                 <div class="social">
                 </div>
                 </a>
@@ -168,7 +168,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100" id="member1231">
               <div class="member-img">
                 <a href="profile5.html">
-                <img src="/assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
+                <img src="./assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
                 </a>
                 <div class="social">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
@@ -184,7 +184,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100" id="member1231">
               <div class="member-img">
                 <a href="profile6.html">
-                <img src="/assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
+                <img src="./assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
                 </a>
                 <div class="social">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
@@ -200,7 +200,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
                 <a href="profile7.html">
-                <img src="/assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
+                <img src="./assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
                 </a>
                 <div class="social">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
@@ -216,7 +216,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
                 <a href="profile8.html">
-                <img src="/assets/img/team/fill.webp" width=500px height=500px class="img-fluid" alt="">
+                <img src="./assets/img/team/fill.webp" width=500px height=500px class="img-fluid" alt="">
                 <div class="social">
                 </div>
                 </a>
