--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ZMUN</title>
+  <title>BCMUN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">ZMUN</a></h1>
+        <h1><a href="index.html">BCMUN</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -70,14 +70,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">ZMUN has announced its second online iteration</h1>
+          <h1 data-aos="fade-up">BCMUN has announced its second online iteration</h1>
           <h2 data-aos="fade-up" data-aos-delay="400">Staffing applications now open!</h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a href="https://eu.jotform.com/form/221957349386066" class="btn-get-started scrollto">Apply to staff</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
-          <img src="https://cdn.pixabay.com/photo/2014/04/02/10/23/united-nations-303670_1280.png" class="img-fluid animated" alt="" width="450px" height="450px">
+          <img src="/assets/img/image.png" class="img-fluid animated" alt="" width="550px" height="450px">
         </div>
       </div>
     </div>
@@ -163,9 +163,9 @@
               </div>
             </div>
           </div>
-          <div class="row">
+          <div class="row" id="row2">
             <div class="col-lg-3 col-md-8 d-flex ">
-            <div class="member" data-aos="fade-up" data-aos-delay="100" id="member1231">
+            <div class="member" data-aos="fade-up" data-aos-delay="100" id="p1">
               <div class="member-img">
                 <a href="profile5.html">
                 <img src="/assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
@@ -181,7 +181,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-8 d-flex ">
-            <div class="member" data-aos="fade-up" data-aos-delay="100" id="member1231">
+            <div class="member" data-aos="fade-up" data-aos-delay="100" id="p2">
               <div class="member-img">
                 <a href="profile6.html">
                 <img src="/assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
@@ -197,7 +197,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 d-flex ">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
+            <div class="member" data-aos="fade-up" data-aos-delay="400" id="p3">
               <div class="member-img">
                 <a href="profile7.html">
                 <img src="/assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
@@ -213,7 +213,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 d-flex ">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
+            <div class="member" data-aos="fade-up" data-aos-delay="400" id="p4">
               <div class="member-img">
                 <a href="profile8.html">
                 <img src="/assets/img/team/fill.webp" width=500px height=500px class="img-fluid" alt="">
