--- a/committees.html
+++ b/committees.html
@@ -91,7 +91,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  UNSC - Advanced/Intermediate Committee <br>
+                  UNSC - Advanced/Intermediate Committee <br><br>
                   Topic: Taiwan-China Conflict (Crisis Committee)
                 </h5>
                 <p>
@@ -108,7 +108,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  UNHCR - Beginner/Intermidiate Committee <br>
+                  UNHCR - Beginner/Intermidiate Committee <br><br>
                   Topic: Displacement of Afghanistan Citizens
                 </h5>
                 <p>
@@ -124,7 +124,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  UNODC - Beginner/Intermidiate Committee <br>
+                  UNODC - Beginner/Intermidiate Committee <br><br>
                   Topic: Legalization of Marijuana and Drug Related Crime
                 </h5>
                 <p>
@@ -140,7 +140,7 @@
 
 <footer>
   <center>
-  <p>Designed By <a href="https://itzxizz.github.io/Portfolio/" target="_blank" rel="noopener noreferrer">Ethan Curtis</a> | &copy;	2022 All rights reserved.</p>
+  <p>Designed By Ethan Curtis</a> | &copy;	2022 All rights reserved.</p>
   </center>
 </footer>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
