--- a/profile2.html
+++ b/profile2.html
@@ -107,7 +107,7 @@
   <footer>
     <center>
     <br>
-    <p>Designed By <a href="https://itzxizz.github.io/Portfolio/" target="_blank" rel="noopener noreferrer">Ethan Curtis</a> | &copy;	2022 All rights reserved.</p>
+    <p>Designed By Ethan Curtis | &copy;	2022 All rights reserved.</p>
     </center>
   </footer>
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
