--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">BCMUN has announced its second online iteration</h1>
+          <h1 data-aos="fade-up">BCMUN has announced its second iteration</h1>
           <h2 data-aos="fade-up" data-aos-delay="400">Staffing applications now open!</h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a href="https://eu.jotform.com/form/221957349386066" class="btn-get-started scrollto">Apply to staff</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
-          <img src="/assets/img/image.png" class="img-fluid animated" alt="" width="550px" height="450px">
+          <img src="/assets/img/image.png" class="img-fluid animated" alt="" width="450px" height="450px">
         </div>
       </div>
     </div>
@@ -156,6 +156,9 @@
                 <div class="social">
                 </div>
                 </a>
+                <div class="social">
+                  <a href="https://www.instagram.com/anna_bananaa27/" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
+                </div>
               </div>
               <div class="member-info">
                 <h4>Annalise Politis</h4>
@@ -171,7 +174,7 @@
                 <img src="./assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
                 </a>
                 <div class="social">
-                  <a href="#" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.instagram.com/cindyyxyang_/" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -187,7 +190,6 @@
                 <img src="./assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
                 </a>
                 <div class="social">
-                  <a href="#" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -203,7 +205,7 @@
                 <img src="./assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
                 </a>
                 <div class="social">
-                  <a href="#" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.instagram.com/a_manda17363/" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -221,7 +223,6 @@
                 </div>
                 </a>
                 <div class="social">
-                  <a href="#" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -305,7 +306,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
             <p>
               <center>
-                Our mission is to provide quality online and in-person Model United Nations Conferences. This is our second official itteration and we are so excited to meet <br> new delegates and be reunited with those who attend last year's conference.
+                Our mission is to provide quality online and in-person Model United Nations Conferences. This is our second official itteration and we are so excited to meet new delegates and be reunited with those who attend last year's conference.
               </center>
             </p>
             <div class="contact-about">
