--- a/profile1.html
+++ b/profile1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Vesperr Bootstrap Template</title>
+  <title>BCMUN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -37,11 +37,12 @@
 </head>
 
 <body>
-  <header id="header" class="fixed-top d-flex align-items-center">
+   <!-- ======= Header ======= -->
+   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">ZMUN</a></h1>
+        <h1><a href="index.html">BCMUN</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
