--- a/profile6.html
+++ b/profile6.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Vesperr Bootstrap Template</title>
+  <title>BCMUN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -37,30 +37,31 @@
 </head>
 
 <body>
-  <header id="header" class="fixed-top d-flex align-items-center">
-    <div class="container d-flex align-items-center justify-content-between">
-
-      <div class="logo">
-        <h1><a href="index.html">ZMUN</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+    <!-- ======= Header ======= -->
+    <header id="header" class="fixed-top d-flex align-items-center">
+      <div class="container d-flex align-items-center justify-content-between">
+  
+        <div class="logo">
+          <h1><a href="index.html">BCMUN</a></h1>
+          <!-- Uncomment below if you prefer to use an image logo -->
+          <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        </div>
+  
+        <nav id="navbar" class="navbar">
+          <ul>
+            <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+            <li><a class="nav-link scrollto active" href="https://eu.jotform.com/form/221957349386066">Staffing Application Form</a></li>
+            <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
+            <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
+            <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
+  
+            
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav><!-- .navbar -->
+  
       </div>
-
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto active" href="https://eu.jotform.com/form/221957349386066">Staffing Application Form</a></li>
-          <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
-          <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
-          <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
-
-          
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
-    </div>
-  </header><!-- End Header -->
+    </header><!-- End Header -->
     <!-- ======= Portfolio Details Section ======= -->
     <center>
     <div data-aos="fade-up" data-aos-delay="100">
