--- a/committees.html
+++ b/committees.html
@@ -96,7 +96,7 @@
                   Topic: Taiwan-China Conflict (Crisis Committee)
                 </h5>
                 <p>
-                    <br>**Background guide + Description comming soon**
+                    <br>**Background guide + Description coming soon**
                 </p>
                
               </div>
@@ -113,7 +113,7 @@
                   Topic: Displacement of Afghanistan Citizens
                 </h5>
                 <p>
-                    <br>**Background guide + Description comming soon**
+                    <br>**Background guide + Description coming soon**
                 </p>
               </div>
             </div>
@@ -129,7 +129,7 @@
                   Topic: Legalization of Marijuana and Drug Related Crime
                 </h5>
                 <p>
-                    <br>**Background guide + Description comming soon**
+                    <br>**Background guide + Description coming soon**
                 </p>
               </div>
             </div>
