--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </div>
               <div class="member-info">
                 <h4>Ethan Curtis</h4>
-                <span>Secretary General, Conference Co-Founder, Technology Adminstrator</span>
+                <span>Co-Secretary General + Adminstrator of Technology</span>
               </div>
             </div>
           </div>
@@ -128,7 +128,7 @@
               </div>
               <div class="member-info">
                 <h4>Michael Xie</h4>
-                <span>Secretary General, Conference Co-Founder</span>
+                <span>Co-Secretary General</span>
               </div>
             </div>
           </div>
@@ -171,7 +171,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100" id="p1">
               <div class="member-img">
                 <a href="profile5.html">
-                <img src="./assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
+                <img src="./assets/img/team/t1.png" width=400px height=400px class="img-fluid" alt="">
                 </a>
                 <div class="social">
                   <a href="https://www.instagram.com/cindyyxyang_/" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
@@ -187,7 +187,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100" id="p2">
               <div class="member-img">
                 <a href="profile6.html">
-                <img src="./assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
+                <img src="./assets/img/team/t2.jpg" width=400px height=400px class="img-fluid" alt="">
                 </a>
                 <div class="social">
                 </div>
@@ -202,7 +202,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="400" id="p3">
               <div class="member-img">
                 <a href="profile7.html">
-                <img src="./assets/img/team/fill.webp" width=400px height=400px class="img-fluid" alt="">
+                <img src="./assets/img/team/t3.jpg" width=400px height=400px class="img-fluid" alt="">
                 </a>
                 <div class="social">
                   <a href="https://www.instagram.com/a_manda17363/" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
