--- a/profile2.html
+++ b/profile2.html
@@ -75,7 +75,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <img src="https://itzxizz.github.io/ZMUN/Michael.jpg" height="400px" style="border-radius:25px">
+                <img src="https://itzxizz.github.io/ZMUN/Michael.jpg" height="340px" style="border-radius:25px">
 
               </div>
               <div class="swiper-pagination"></div>
@@ -85,14 +85,11 @@
           <div class="col-lg-9">
             <div class="portfolio-info">
               <h3>Get to know the secretariat</h3>
-              <ul>
-                <li><strong>Name</strong>: Michael Xie</li>
-              </ul>
             </div>
               <div class="portfolio-info">
               <h2>About Michael Xie</h2>
               <p>
-                Michael is a student sudying on Vancouver Island, attempting to make his community a better place. With this conference, Michael hopes to develop new skills and gain experience. Michael can typically be found at the golf course or in his room playing his guitar, which he is extremely passionate about. Michael is very excited to be a secretariat member at ZMUN 2022!
+                Michael is a student sudying on Vancouver Island, attempting to make his community a better place. With this conference, Michael hopes to develop new skills and gain experience. Michael can typically be found at the golf course or in his room playing his guitar, which he is extremely passionate about. Michael is very excited to be a secretariat member at BCMUN 2022!
               </p>
             </div>
           </div>
