--- a/profile3.html
+++ b/profile3.html
@@ -75,7 +75,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <img src="https://itzxizz.github.io/ZMUN/Yinfan.png" height="400px" style="border-radius:25px">
+                <img src="https://itzxizz.github.io/ZMUN/Yinfan.png" height="340px" style="border-radius:25px">
 
               </div>
               <div class="swiper-pagination"></div>
@@ -86,13 +86,12 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Name</strong>: Yingfan Bai</li>
               </ul>
             </div>
               <div class="portfolio-info">
               <h2>About Yingfan Bai</h2>
               <p>
-                Yingfan is a student currently studying on Vancouver Island. She is so excited to be serving on the secretariat team this year as the Secretary of Staff. Her first Model United Nations conference was in Grade 7, and that was the start to her Model UN passion. Ever since, Yingfan has attended many in person and online conferences. Outside of the Model UN world, Yingfan can be found dancing and swimming. Yingfan is looking forward to ZMUN 2022 and meeting everyone!
+                Yingfan is a student currently studying on Vancouver Island. She is so excited to be serving on the secretariat team this year as the Secretary of Staff. Her first Model United Nations conference was in Grade 7, and that was the start to her Model UN passion. Ever since, Yingfan has attended many in person and online conferences. Outside of the Model UN world, Yingfan can be found dancing and swimming. Yingfan is looking forward to BCMUN 2022 and meeting everyone!
               </p>
             </div>
           </div>
