--- a/profile4.html
+++ b/profile4.html
@@ -86,13 +86,12 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Name</strong>: Annalise Politis</li>
               </ul>
             </div>
               <div class="portfolio-info">
               <h2>About Annalise Politis</h2>
               <p>
-                Annalise is a Grade 10 student currently attending Saint Patrick's Regional High School and is ecstatic to be serving as director for the UNSC. Ever since her first conference in 2019, she grew her passion for Model United Nations. From the intense atmosphere of moderated caucuses and the exhilarating feeling of passing a resolution paper, never fails to give Annalise a rush of adrenaline. Annalise has met long-term friends and made memories that will last a lifetime. Outside the debate floor, Annalise spends her time spending her life savings on a gacha game, sketching whatever her heart desires and cuddling with her rabbit. Annalise is looking forward to ZMUN 2022 and is excited to meet everyone!
+                Annalise is a Grade 11 student currently attending Saint Patrick's Regional High School and is ecstatic to be serving as the chief of staff here at BCMUN. Ever since her first conference in 2019, she grew her passion for Model United Nations. From the intense atmosphere of moderated caucuses and the exhilarating feeling of passing a resolution paper, never fails to give Annalise a rush of adrenaline. Annalise has met long-term friends and made memories that will last a lifetime. Outside the debate floor, Annalise spends her time spending her life savings on a gacha game, sketching whatever her heart desires and cuddling with her rabbit. Annalise is looking forward to BCMUN 2022 and is excited to meet everyone!
               </p>
             </div>
           </div>
