--- a/profile5.html
+++ b/profile5.html
@@ -68,20 +68,21 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container" data-aos="fade-down" data-aos-delay="100">
           <br><br><br>
-        <div class="row gy-4">
+        <div class="row gy-9">
 
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="portfolio-details-slider swiper">
+              <br>
               <div class="swiper-wrapper align-items-center">
-
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" width=900px height=400px  style="border-radius:25px">
+                <br><br><br>
+                <img src="./assets/img/team/t1.png" width=900px height=340px  style="border-radius:25px">
 
               </div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
 
-          <div class="col-lg-7">
+          <div class="col-lg-9">
             <div class="portfolio-info">
               <h3>Get to know your secretariat</h3>
             </div>
