--- a/profile6.html
+++ b/profile6.html
@@ -71,25 +71,25 @@
           <br><br><br>
         <div class="row gy-4">
 
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" width=900px height=400px  style="border-radius:25px">
+                <img src="./assets/img/team/t2.jpg" width=700px height=340px  style="border-radius:25px">
 
               </div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
 
-          <div class="col-lg-7">
+          <div class="col-lg-9">
             <div class="portfolio-info">
               <h3>Get to know your secretariat</h3>
             </div>
               <div class="portfolio-info">
               <h2>About Jessie Wang</h2>
               <p>
-                **Description Currently Unavailable**
+                Jessie Wang is a grade 9 student studying at Saint Michaels University School in the city of Victoria, and is deeply honored to serve on the secretariat team this year as the Undersecretary General of Committees. She has only been involved in Model UN since 2021 but she is yet highly passionate about debating and current affairs. In her free time, Jessie enjoys playing violin and studying philosophy. 
               </div>
           </div>
 
