--- a/profile1.html
+++ b/profile1.html
@@ -72,6 +72,7 @@
 
           <div class="col-lg-5">
             <div class="portfolio-details-slider swiper">
+              <br>
               <div class="swiper-wrapper align-items-center">
 
                 <img src="https://itzxizz.github.io/ZMUN/ethan.jpg" style="border-radius:25px">
@@ -85,13 +86,12 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Name</strong>: Ethan Curtis</li>
               </ul>
             </div>
               <div class="portfolio-info">
               <h2>About Ethan Curtis</h2>
               <p>
-                Ethan is a highschool student currently studying on Vancouver Island and is overjoyed to be this year's Secretary General and Chief of technology at ZMUN. Ever since his first conference in 2019, Ethan's love for Model United Nations has continually grown. Attending and staffing at conferences has instilled in him memories that will last him a lifetime. Outside of MUN, Ethan spends his time practicing for and competing in tennis tournaments, playing the violin, programming, and enjoying music. Ethan is looking forward to administering ZMUN’s second iteration and can’t wait to meet everyone!
+                Ethan is a highschool student currently studying on Vancouver Island and is overjoyed to be this year's Secretary General and Chief of technology at BCMUN. Ever since his first conference in 2019, Ethan's love for Model United Nations has continually grown. Attending and staffing conferences has resulted in memories that will last him a lifetime. Outside of MUN, Ethan spends his time practicing and competing in tennis tournaments, playing the violin and piano, programming, and enjoying music. Ethan is looking forward towards administering BCMUN's second iteration and can’t wait to meet everyone!
               </p>
             </div>
           </div>
