--- a/profile7.html
+++ b/profile7.html
@@ -71,18 +71,18 @@
           <br><br><br>
         <div class="row gy-4">
 
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" width=900px height=400px  style="border-radius:25px">
+                <img src="./assets/img/team/t3.jpg" width=900px height=340px  style="border-radius:25px">
 
               </div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
 
-          <div class="col-lg-7">
+          <div class="col-lg-9">
             <div class="portfolio-info">
               <h3>Get to know your secretariat</h3>
             </div>
